# map_projection

./: .gitignore  README.md  debug_loss_baseline.py  inspect_loss.py  math_explanation.md  pyproject.toml
src/: analyze_results.py  check_mask.py  check_memory.py  debug_ar_grad.py  debug_jac.py  demo.py  gen_image.py  gen_mesh_image.py  gen_mesh_wireframe.py  grid_search.py  mesh.py  model.py  optimize.py  prepare_texture.py  run_fixed_ar.py  run_identity.py  run_mesh.py  run_world.py  train.py  utils.py
